# src/characters/entities/characters.entity.js
@@ -1,23 +1,23 @@
 const crypto = require('crypto');
 class CharacterEntity {
   constructor(character) {
-    this.nome = character.nome;
-    this.imagemUrl = character.imagemUrl;
+    this.name = character.name;
+    this.imageUrl = character.imageUrl;
   }
 
   validate() {
-    if (!this.nome || !this.nome.length > 5) {
+    if (!this.name || !this.name.length > 5) {
       throw new Error('Nome precisa ser preenchido');
     }
-    if (!this.imagemUrl) {
-      this.imagemUrl = 'Url precisa ser informado';
+    if (!this.imageUrl) {
+      this.imageUrl = 'Url precisa ser informado';
     }
   }
 
   getCharacter() {
     return {
-      nome: this.nome,
-      imagemUrl: this.imagemUrl,
+      name: this.name,
+      imageUrl: this.imageUrl,
     };
   }
 }
