# src/characters/models/Characters.js
@@ -1,8 +1,8 @@
 const { Schema, model } = require("mongoose");
 
 const CharacterSchema = new Schema({
-  nome: { type: String, require: true },
-  imagemUrl: { type: String, require: true },
+  name: { type: String, require: true },
+  imageUrl: { type: String, require: true },
 });
 
 const Characters = model('characters', CharacterSchema);
